code refactor, added comments

--- a/style.html
+++ b/style.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 <div class="div-turn">
-    <span class="radha">x</span>
+    <span class="radha" style="display:none">x</span>
     <span class="spn-turn">select player</span>
 </div>
 <div class="div-table">
